# asgard

./: .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
crates/asgard/: Cargo.toml
crates/reviewer/: Cargo.toml
crates/reviewer/src/: code_review.rs  lib.rs  llm_judge.rs  manifest.rs  repo.rs  webhook.rs
docs/docs/: deploy.md  intro.md  migrate-app.md  quickstart.md  review-gate.md
reviewers/code-review/: reviewer.yaml
reviewers/llm-judge/: reviewer.yaml
scripts/: e2e.sh
seed/: .gitignore  AGENTS.md  README.md  project.yaml
services/access-grant/: service.yaml
services/alb/: README.md  service.yaml
services/anthropic/: service.yaml
services/auth0-application/: service.yaml
services/databricks/: README.md  service.yaml
services/databricks-job/: service.yaml
services/databricks-model-serving/: README.md  service.yaml
services/databricks-sql-warehouse/: README.md  service.yaml
services/databricks-uc-volume/: service.yaml
services/dynamodb-table/: service.yaml
services/ec2-instance/: service.yaml
services/ecr-credential/: README.md  service.yaml
services/ecr-repository/: service.yaml
services/ecs-service/: README.md  service.yaml
services/ecs-task/: service.yaml
services/litellm/: service.yaml
services/litellm-key/: service.yaml
services/openai/: service.yaml
services/rds-postgres/: service.yaml
services/s3-bucket/: service.yaml
services/secretsmanager-secret/: README.md  service.yaml
services/tf-demo/: service.yaml
website/: README.md
(+49 files in other folders)
