[package]
name = "asgard-reviewer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asgard-gateway.workspace = true
asgard-registry.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
rust-embed.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
